log
Thu Mar 17 21:42:16 HSP 2022: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9ed96d2
Thu Mar 17 21:47:28 HSP 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
689cb9c
Fri Mar 18 21:51:03 HSP 2022: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
ff19f5e
Fri Mar 18 21:53:01 HSP 2022: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
8b0c7bc
Fri Mar 18 22:10:49 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:13: error: 'return' with a value, in function returning void [-Werror]
     return d->data;
            ~^~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4eb465e
Fri Mar 18 22:11:14 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:82:12: error: 'return' with a value, in function returning void [-Werror]
     return d;
            ^
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ebf1d37
Fri Mar 18 22:33:36 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:83:13: error: 'return' with a value, in function returning void [-Werror]
     return d->data;
            ~^~~~~~
list.c:71:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c: In function 'nextList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1eedd0a
Fri Mar 18 22:34:59 HSP 2022: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 15/70
a4115dd
Fri Mar 18 22:54:20 HSP 2022: 
 list.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
 tests:  3|5
total_score: 15/70
6ccb422
Fri Mar 18 22:55:39 HSP 2022: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
3848889
Fri Mar 18 22:58:46 HSP 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|4
total_score: 25/70
0cd92c5
Fri Mar 18 23:04:41 HSP 2022: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  9|3
total_score: 35/70
b0b00a0
Fri Mar 18 23:24:35 HSP 2022: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  9|3
total_score: 35/70
b9ac2c5
Fri Mar 18 23:26:45 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
7433bd8
Fri Mar 18 23:29:13 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
43a2b90
Fri Mar 18 23:34:50 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
0092d20
Fri Mar 18 23:36:31 HSP 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
dcb1299
